--- a/index.html
+++ b/index.html
@@ -1508,32 +1508,41 @@ FAF Games is a trusted hub for <strong>unblocked games</strong> that work at sch
 
   <ol>
     <li>
-      <a href="/game/1v1-lol.html">1v1.LOL Unblocked</a> – Competitive shooting and building gameplay that runs smoothly in full screen.
-    </li>
-    <li>
-      <a href="/game/basket-random.html">Basket Random</a> – A fun physics-based basketball game perfect for quick matches.
-    </li>
-    <li>
-      <a href="/game/tiny-fishing.html">Tiny Fishing</a> – A relaxing idle fishing game great for short breaks.
-    </li>
-    <li>
-      <a href="/game/basketball-bros.html">Basketball Bros</a> – A classic sports game with quick one-on-one action.
-    </li>
-    <li>
-      <a href="/game/moto-x3m-bike-race.html">Moto X3M</a> – A bike stunt game with smooth controls and challenging levels.
-    </li>
-    <li>
-      <a href="/game/slope.html">Slope</a> – A fast reflex game that tests focus and reaction time.
-    </li>
-    <li>
-      <a href="/game/drift-boss.html">Drift Boss</a> – A simple drifting game that’s easy to learn but hard to master.
-    </li>
-    <li>
-      <a href="/game/run-3.html">Run 3</a> – A popular endless runner with space-themed levels.
-    </li>
-    <li>
-      <a href="/game/idle-breakout.html">Idle Breakout</a> – A modern idle game that runs well on low-end devices.
-    </li>
+  <a href="/game/1v1-lol.html">1v1.LOL Unblocked</a> – A competitive shooting and building game inspired by battle-style gameplay. Players can practice aim, build structures, and compete in fast one-on-one matches that run smoothly in fullscreen on school devices.
+</li>
+
+<li>
+  <a href="/game/basket-random.html">Basket Random</a> – A fun physics-based basketball game where every match feels different. Simple controls, unpredictable movements, and quick rounds make it perfect for short breaks at school.
+</li>
+
+<li>
+  <a href="/game/tiny-fishing.html">Tiny Fishing</a> – A relaxing idle fishing game where players catch fish, earn coins, and upgrade gear over time. Its calm gameplay and low system requirements make it ideal for Chromebooks.
+</li>
+
+<li>
+  <a href="/game/basketball-bros.html">Basketball Bros</a> – A classic sports game focused on fast one-on-one basketball action. Easy to learn controls and short matches make it popular for casual competitive play.
+</li>
+
+<li>
+  <a href="/game/moto-x3m-bike-race.html">Moto X3M</a> – A bike stunt and racing game featuring challenging obstacle courses, smooth controls, and timed levels. Each stage tests balance, speed, and precision.
+</li>
+
+<li>
+  <a href="/game/slope.html">Slope</a> – A fast-paced reflex game where players control a rolling ball down an endless slope. The increasing speed and sharp turns test focus and reaction time.
+</li>
+
+<li>
+  <a href="/game/drift-boss.html">Drift Boss</a> – A simple drifting game built around timing and control. Players drift across narrow tracks, making it easy to start playing but difficult to master.
+</li>
+
+<li>
+  <a href="/game/run-3.html">Run 3</a> – A popular endless runner set in space, featuring multiple characters and levels. Players jump, run, and avoid falling as the difficulty gradually increases.
+</li>
+
+<li>
+  <a href="/game/idle-breakout.html">Idle Breakout</a> – A modern idle game inspired by classic brick-breaking mechanics. Players earn progress automatically, making it great for relaxed gameplay on low-end devices.
+</li>
+
   </ol>
 
   <p>
