--- a/index.html
+++ b/index.html
@@ -1555,19 +1555,19 @@ FAF Games is a trusted hub for <strong>unblocked games</strong> that work at sch
     To help players find what they enjoy faster, FAF Games organizes content into clear categories.
   </p>
 
-  <h3><a href="/category/action.html">🔥 Action Games</a></h3>
+  <h3><a href="/action/index.html">🔥 Action Games</a></h3>
   <p>Fast-paced gameplay focused on reactions, movement, and skill-based challenges.</p>
 
-  <h3><a href="/category/idle.html">🧠 Idle Games</a></h3>
+  <h3><a href="/idle/index.html">🧠 Idle Games</a></h3>
   <p>Relaxed games that continue progress even with minimal interaction.</p>
 
-  <h3><a href="/category/shooting.html">🎯 Shooting Games</a></h3>
+  <h3><a href="/shooting/index.html">🎯 Shooting Games</a></h3>
   <p>Competitive games designed for short matches and quick reflexes.</p>
 
-  <h3><a href="/category/sports.html">⚽ Sports Games</a></h3>
+  <h3><a href="/sports/index.html">⚽ Sports Games</a></h3>
   <p>Basketball, biking, and other sports titles that work smoothly on school devices.</p>
 
-  <h3><a href="/category/skill.html">🎮 Skill Games</a></h3>
+  <h3><a href="/skill/index.html">🎮 Skill Games</a></h3>
   <p>Games that test timing, accuracy, and coordination without complex mechanics.</p>
 
   <h2>Why These Games and Categories Matter</h2>
